2021-09-25  Björn Esser  <besser82 at fedoraproject.org>

	* pam_tcb/support.c (_set_ctrl): Request automatic prefix only if
	libcrypt really implements it.
	In some specific, but unusual, build-time configurations of libxcrypt
	the CRYPT_GENSALT_IMPLEMENTS_DEFAULT_PREFIX feature-test macro is
	defined to 0, which means libxcrypt does not provide a best-choice
	default prefix.

	libnss_tcb: Apply proper soname during linking.
	* libs/Makefile: Apply proper soname to libnss_tcb.so.2.

	libnss_tcb: Drop unneeded LIBNSL from linked libraries.
	* libs/Makefile: Stop linking libnss_tcb.so.2 against LIBNSL.

	make: Allow install and mkdir programs to be user configurable.
	Also pass an explicit dirmode to MKDIR.
	* Make.defs: Allow for configurable install and mkdir programs.
	* libs/Makefile: Likewise.
	* misc/Makefile: Likewise.
	* pam_tcb/Makefile: Likewise.
	* progs/Makefile: Likewise.

	libnss_tcb: Use readdir(3) with glibc >= 2.24.
	* libs/nss.c (_nss_tcb_getspnam_r): glibc, since version 2.24,
	has deprecated readdir_r(3).  It is recommended that applications
	use readdir(3) instead of readdir_r(3).  Also use thread local
	storage for the underlying directory stream in this case.
	* LICENSE: Update copyright for this contribution.

	pam_tcb: Allow setting a custom PAM_SO_SUFFIX during build.
	At least FreeBSD and NetBSD are using OpenPAM, which needs
	the ability to specify a PAM_SO_SUFFIX to externally built
	modules.
	* pam_tcb/Makefile: Honor PAM_SO_SUFFIX variable.

	pam_tcb: Apply proper soname during linking if PAM_SO_SUFFIX
	is set.
	* pam_tcb/Makefile: Apply proper soname with PAM_SO_SUFFIX
	not being empty. Adapt clean target also.

	* .gitignore: Adapt ignore rule for pam_tcb.so with
	PAM_SO_SUFFIX set.

2021-09-25  Dmitry V. Levin  <ldv at owl.openwall.com>

	Add github CI.
	This enables a whitespace check and a bunch of build checks using
	several versions of gcc and clang.
	* .gitattributes: New file.
	* .github/workflows/ci.yml: Likewise.